# tank

./: .ctxrc  .env.example  .env.example.onprem  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.json  .trivyignore  .vercelignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  conftest.py  docker-compose.yml  install.sh  justfile  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  security-scanning-system-plan.md  security-scanning-upgrade-plan.md  skills.json  test-scan.sh  tsconfig.json  tsconfig.solution.json  turbo.json  vercel.json
.bdd/: package.json  (+1 more)
apps/python-api/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  vercel.json  vercel.json.md
apps/python-api/api/: index.py  main.py
apps/python-api/api/analyze/: permissions.py  rescan.py  scan.py  security.py
apps/python-api/api/analyze/tests/: test_analyze.py
apps/python-api/lib/scan/: __init__.py  cisco_scanner.py  context.py  dedup.py  llm_analyzer.py  llm_health.py  llm_types.py  markdown_utils.py  models.py  permission_extractor.py  remediation.py  safe_patterns.py  sarif.py  stage0_ingest.py  stage1_structure.py  stage2_analyzers.py  stage2_static.py  stage3_injection.py  stage3_patterns.py  stage4_secrets.py  stage5_helpers.py  stage5_supply.py  stage_token.py  test_description_truncation.py  test_llm_analyzer.py  test_llm_analyzer_integration.py  test_snyk_scanner.py  test_stage_token.py  test_sub_path.py  verdict.py
apps/python-api/lib/scan/patterns/: __init__.py  injection.json  safe_patterns.json
apps/python-api/tests/: test_detect_secrets_available.py  test_rescan_stores_results.py  test_scanner_report_redesign.py  test_stage0_ingest_ordering.py  test_stage4_envvar_placeholder.py  test_stage4_lock_files.py  test_stage5_typosquat.py  test_stage_nonproduction_paths.py
apps/python-api/tests/test_skills/: test_skill_corpus.py
python-api/: AGENTS.md  Dockerfile  README.md  index.py  main.py  pyproject.toml  requirements.txt  vercel.json
python-api/api/: index.py  main.py
python-api/api/analyze/: index.py  permissions.py  rescan.py  scan.py  security.py
python-api/api/analyze/tests/: test_analyze.py
python-api/lib/scan/: __init__.py  cisco_scanner.py  dedup.py  llm_analyzer.py  models.py  permission_extractor.py  sarif.py  snyk_scanner.py  stage0_ingest.py  stage1_structure.py  stage2_static.py  stage3_injection.py  stage4_secrets.py  stage5_supply.py  test_llm_analyzer.py  test_snyk_scanner.py  verdict.py
python-api/lib/scan/semgrep-rules/: agent-exfiltration.yaml  agent-injection.yaml  agent-obfuscation.yaml
python-api/tests/test_skills/: test_skill_corpus.py
python-api/tests/test_skills/benign/complex_but_safe/: __init__.py  main.py  processor.py
python-api/tests/test_skills/benign/env_config_read/: config.py
python-api/tests/test_skills/benign/file_operations/: skill.py
python-api/tests/test_skills/benign/network_declared/: skill.py
python-api/tests/test_skills/benign/simple_tool/: skill.py
python-api/tests/test_skills/malicious/dynamic_install/: installer.py
python-api/tests/test_skills/malicious/env_harvesting/: skill.py
python-api/tests/test_skills/malicious/exfiltration_multifile_A/: reader.py
python-api/tests/test_skills/malicious/exfiltration_multifile_B/: encoder.py
python-api/tests/test_skills/malicious/exfiltration_multifile_C/: sender.py
(+1637 files in other folders)
