[project]
name = "tank-scanner"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "charset-normalizer>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "bandit>=1.8.0",
    "skill-scanner>=0.2.0",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.vercel]
# Vercel Python runtime configuration
