[project]
name = "tank-scanner"
version = "2.0.0"
description = "Tank Security Scanner - FastAPI-based security scanner for Claude Code skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "charset-normalizer>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "bandit>=1.8.0",
    "skill-scanner>=0.2.0",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
# Tell Vercel where to find the FastAPI app
app = "api.main:app"
