[project]
name = "tank-scanner"
version = "2.0.0"
description = "Tank Security Scanner - FastAPI-based security scanner for Claude Code skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "charset-normalizer>=3.0.0",
    "bandit>=1.8.0",
    "skill-scanner>=0.2.0",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.0",
    "pyright>=1.1.0",
]

[project.scripts]
app = "api.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade (catches Python version compat issues like the except syntax bug)
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long — let formatter handle it
    "SIM117", # nested with — sometimes clearer than combined
    "B008",   # function call in default arg — FastAPI uses this pattern (Depends(), Body(), etc.)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
